--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,20 +2,26 @@ en:
   errors:
     messages:
       taken_in_past: 'was used previously.'
-      equal_to_current_password: 'must be different than the current password.'
+      equal_to_current_password: 'must be different from the current password.'
       password_complexity:
         digit:
           one: must contain at least one digit
           other: must contain at least %{count} digits
+        digits:
+          one: must contain at least one digit
+          other: must contain at least %{count} digits
         lower:
-          one: must contain at least one lower-case letter
-          other: must contain at least %{count} lower-case letters
+          one: must contain at least one lowercase letter
+          other: must contain at least %{count} lowercase letters
         symbol:
           one: must contain at least one punctuation mark or symbol
           other: must contain at least %{count} puncutation marks or symbols
+        symbols:
+          one: must contain at least one punctuation mark or symbol
+          other: must contain at least %{count} puncutation marks or symbols
         upper:
-          one: must contain at least one upper-case letter
-          other: must contain at least %{count} upper-case letters
+          one: must contain at least one uppercase letter
+          other: must contain at least %{count} uppercase letters
   devise:
     invalid_captcha: 'The captcha input was invalid.'
     invalid_security_question: 'The security question answer was invalid.'
