Fix typos in BY locale

--- a/config/locales/by.yml
+++ b/config/locales/by.yml
@@ -11,9 +11,9 @@ by:
           other: 'павінен утрымліваць хоць %{count} лічбы'
         lower:
           one: 'павінен утрымліваць хоць адну маленькую літару'
-          few: 'павінен утрымліваць хоць %{count} малыя літары'
-          many: 'павінен утрымліваць хоць %{count} малыя літары'
-          other: 'павінен утрымліваць хоць %{count} малыя літары'
+          few: 'павінен утрымліваць хоць %{count} малыx літары'
+          many: 'павінен утрымліваць хоць %{count} малыx літары'
+          other: 'павінен утрымліваць хоць %{count} малыx літары'
         symbol:
           one: 'павінен утрымліваць хоць адзін знак пунктуацыі або сімвал'
           few: 'павінен утрымліваць хоць %{count} знака пунктуацыі або сімвала'
@@ -21,9 +21,9 @@ by:
           other: 'павінен утрымліваць хоць %{count} знака пунктуацыі або сімвала'
         upper:
           one: 'павінен утрымліваць хоць адну вялікую літару'
-          few: 'павінен утрымліваць хоць %{count} вялікія літары'
-          many: 'павінен утрымліваць хоць %{count} вялікія літары'
-          other: 'павінен утрымліваць хоць %{count} вялікія літары'
+          few: 'павінен утрымліваць хоць %{count} вялікіx літары'
+          many: 'павінен утрымліваць хоць %{count} вялікіx літары'
+          other: 'павінен утрымліваць хоць %{count} вялікіx літары'
   devise:
     invalid_captcha: 'Уведзены няправільны код капчы.'
     invalid_security_question: 'Адказ на сакрэтнае пытанне быў няправільны.'
