--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -28,7 +28,6 @@ uk:
     invalid_captcha: 'Неправильне введення капчі.'
     invalid_security_question: 'Неправильна відповідь на секретне питання.'
     paranoid_verify:
-      code_required: 'Пожалуйста введите код, полученный от нашей команды поддержки'
       code_required: 'Введіть, будь ласка, код від нашої команди підтримки'
     paranoid_verification_code:
       show:
@@ -46,4 +45,4 @@ uk:
         change_my_password: Змінити пароль
     failure:
       session_limited: 'Ваші облікові дані були використані в іншому браузері. Будь ласка, авторизуйтесь знову щоб продовжити в цьому браузері.'
-      expired: "Ваш аккаунт застарів через неактивніть. Будь ласка, зв'яжіться з адміністратором."
+      expired: "Ваш аккаунт застарів через неактивність. Будь ласка, зв'яжіться з адміністратором."
