change invalid_captcha translation

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -25,7 +25,7 @@ uk:
           many: 'повинен включати хоча б %{count} прописних букв'
           other: 'повинен включати хоча б %{count} прописні букви'
   devise:
-    invalid_captcha: 'Неправильне введення капчі.'
+    invalid_captcha: 'Введення капчі недійсне.'
     invalid_security_question: 'Неправильна відповідь на секретне питання.'
     paranoid_verify:
       code_required: 'Введіть, будь ласка, код від нашої команди підтримки'
