--- a/config/locales/zh_CN.yml
+++ b/config/locales/zh_CN.yml
@@ -11,14 +11,14 @@ zh_CN:
           one: 必须包含至少1个小写字母
           other: 必须包含至少%{count}个小写字母
         symbol:
-          one: 必须包含至少1个标点符号
-          other: 必须包含至少%{count}个标点符号
+          one: 必须包含至少1个特殊符号（!"#$%&'()*+,-./:;<=>?@[\]^_‘{|}~)
+          other: 必须包含至少%{count}个特殊符号（!"#$%&'()*+,-./:;<=>?@[\]^_‘{|}~）
         upper:
           one: 必须包含至少1个大写字母
           other: 必须包含至少%{count}个大写字母
   devise:
-    invalid_captcha: '无效验证码'
-    invalid_security_question: '无效安全问题答案'
+    invalid_captcha: '验证码无效。'
+    invalid_security_question: '安全问题答案无效。'
     paranoid_verify:
       code_required: '请输入我们支持团队提供的代码'
     paranoid_verification_code:
@@ -27,8 +27,8 @@ zh_CN:
         verification_code: 验证码
         submit: 提交
     password_expired:
-      updated: '新密码已保存'
-      change_required: '你的密码已过期，请更新密码.'
+      updated: '你的新密码已保存。'
+      change_required: '你的密码已过期，请更新密码。'
       show:
         renew_your_password: 更新你的密码
         current_password: 当前密码
@@ -37,4 +37,4 @@ zh_CN:
         change_my_password: 更改密码
     failure:
       session_limited: '你的登录凭据已在另一个浏览器上被使用。请重新登录以在此浏览器继续。'
-      expired: '由于不活跃，你的账户过期。请联系站点管理员。'
+      expired: '由于不活跃，你的账户已过期。请联系站点管理员。'
