--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -2,8 +2,8 @@
 hi:
   errors:
     messages:
-      taken_in_past: पहले लिया जा चुका है  
-      equal_to_current_password: वर्तमान पासवर्ड के बराबर है 
+      taken_in_past: यह पासवर्ड, आपके द्वारा पूर्व मे प्रयोग किया जा चुका है  
+      equal_to_current_password: नया पासवर्ड, वर्तमान पासवर्ड से भिन्न होना चाहिए 
       password_complexity:
         digit:
           one: एक अंक होना चाहिए 
@@ -18,8 +18,8 @@ hi:
           one: एक अपर-केस अक्षर होना चाहिए 
           other: कम से कम %{count} अपर-केस अक्षर होने चाहिए  
   devise:
-    invalid_captcha: कॅप्टचा सही नही था 
-    invalid_security_question: सुरक्षा उत्तर गलत था 
+    invalid_captcha: अमान्य कॅप्टचा
+    invalid_security_question: अमान्य सुरक्षा उत्तर
     paranoid_verify:
       code_required: सपोर्ट टीम द्वारा दिया गया कोड डाले 
     paranoid_verification_code:
@@ -32,10 +32,10 @@ hi:
       change_required: पासवर्ड अमान्य हो चुका, पासवर्ड बदले 
       show:
         renew_your_password: पासवर्ड बदले 
-        current_password: अभी का पासवर्ड 
+        current_password: वर्तमान पासवर्ड
         new_password: नया पासवर्ड 
-        new_password_confirmation: नया पासवर्ड पुष्टि किया गया
+        new_password_confirmation: नए पासवर्ड की पुष्टि करें 
         change_my_password: पासवर्ड बदले 
     failure:
       session_limited: जानकारी, दूसरे ब्राउज़र में उपयोग की गयी थी जारी रखने फिर से साइन-इन करे 
-      expired: बिना गतिविधि के खाता बंद किया गया, सिस्टम एडमिनिस्ट्रेटर से संपर्क करे 
+      expired: कोई गतिविधि न होने के कारण खाता बंद हो गया, सिस्टम व्यवस्थापक से संपर्क करें
