Add validation to ensure password does not match email to secure_validatable
This simple validation protects against a very simple password which an
attacker would be able to fairly simply guess or attempt. It's a bad
practice, so let's make sure that it's not possible to set such a
password :).

--- a/config/locales/by.yml
+++ b/config/locales/by.yml
@@ -3,6 +3,7 @@ by:
     messages:
       taken_in_past: 'ужо раней выкарыстоўваўся.'
       equal_to_current_password: 'павінен адрознівацца ад сучаснага пароля.'
+      equal_to_email: 'павінна адрознівацца ад электроннай пошты.'
       password_complexity:
         digit:
           one: 'павінен утрымліваць хоць адну лічбу'
