--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -3,6 +3,7 @@ tr:
     messages:
       taken_in_past: "daha önce kullanıldı."
       equal_to_current_password: "mevcut paroladan farklı olmalı."
+      equal_to_email: "e-postadan farklı olmalı."
       password_format: "büyük, küçük harfler ve sayılar içermeli."
   devise:
     invalid_captcha: "Captcha hatalı."
